fix form on mobile device

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -20,3 +20,9 @@
     padding: .5rem 0;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .form {
+    width: 100%;
+  }
+}
